--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <body>
     <h1>Exceptional</h1>
     <h2>Realty Group</h2>
+    <img src="images/intro-pic.jpg" alt="a beautiful living room" title="Welcome to Exceptional Realty">
     <p>Hello World</p>
     
     <p>Hello Moon</p>
