--- a/index.html
+++ b/index.html
@@ -24,5 +24,10 @@
     
     <p>Hello Moon</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+    <video controls>
+      <source src="videos/real-estate.mp4" type="video/mp4">
+      <source src="videos/real-estate.ogv" type="video/ogv">
+      Your browser does not support HTML5 video.  <a href="https://browsehappy.com/" target="_blank">Please upgrade your browser</a>
+    </video>
   </body>
 </html>
